fixing postgresql bits
